# helpdeskAi

./: .gitignore  LICENSE  README.md  alembic.ini  build_widget.py  index.html  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2026_01_08_1811-880081a8f17a_initial_migration.py  2026_01_08_1924-653571ac65b6_add_password_reset_fields_to_user.py  2026_01_10_1225-cf055de9ccf2_add_s3_storage_and_user_storage_usage.py  2026_01_21_1726-586e8e4f2fc3_add_widget_configuration_to_agent_.py  2026_01_21_1817-b401e39f9f56_add_performance_indexes_to_usage_log_.py  2026_01_22_1432-687b431d57a9_add_avatar_url_to_agents.py  2026_05_04_1600-phase1_supabase_milvus_hybrid.py  2026_05_09_1400-add_extracted_text_to_knowledge_bases.py  2026_05_09_1500-drop_extracted_text_from_knowledge_bases.py  2026_05_09_1700-add_kb_ingest_progress.py  2026_05_10_1700-add_widget_use_color_header.py  (+7 more)
api/: __init__.py  agents.py  analytic.py  auth.py  chat.py  kb.py  models.py  scrape.py  upload.py  users.py
api/agents/: agents.py  (+5 more)
db/: __init__.py  database.py  models.py  schemas.py
frontend/: README.md  index.html  metadata.json  package-lock.json  package.json
models/: __init__.py  agent.py  enums.py  knowledge_base.py  user.py  widget_deployment.py
schemas/: __init__.py  agent.py  enums.py  knowledge_base.py  user.py
services/: ai_prompt_builder.py  cache_keys.py  celery_app.py  chat_runtime.py  cloudflare_storage.py  email.py  file_parser.py  http_client.py  image_upload.py  ingest_queue.py  ingest_tasks.py  ingest_worker.py  kb_limits.py  kb_source_storage.py  rag_service.py  rate_limit.py  redis_client.py  retention.py  retention_tasks.py  s3_storage.py  scrape_service.py  storage_quota.py  supabase_auth.py  vector_store.py  web_scraper.py
static/: auth_test.html  widget-loader.js  widget-panel.html  widget-panel.js  widget.js
tests/: conftest.py  test_performance_remediation.py  test_widget_compatibility.html
utils/: env.py  groq.py  jwt.py  rate_limit.py  security.py  widget_security.py
(+67 files in other folders)
