[project]
name = "helpdeskai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "alembic>=1.18.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "boto3==1.35.0",
    "botocore==1.35.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "cryptography==44.0.3",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "dotenv==0.9.9",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.12",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "litellm>=1.80.0",
    "marshmallow==3.26.1",
    "multidict==6.6.3",
    "mypy-extensions==1.1.0",
    "numpy>=2.4.4",
    "orjson==3.10.18",
    "packaging==24.2",
    "propcache==0.3.2",
    "psycopg2-binary==2.9.10",
    "pymilvus>=2.6.0",
    "pyasn1>=0.4.8",
    "pycparser==2.22",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings==2.10.1",
    "pymupdf==1.25.5",
    "pypdf2==3.0.1",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "sib-api-v3-sdk>=7.6.0",
    "six==1.17.0",
    "slowapi>=0.1.9",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.40",
    "supabase>=2.27.0",
    "starlette==0.46.2",
    "tenacity==9.1.2",
    "typing-extensions>=4.14.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "yarl>=1.22.0",
    "zstandard==0.23.0",
]
